@@ -1,9 +1,9 @@
-MD5 4159319cdde69a84b6348b5e63c1b5d9 texlive-basicbin-2007.tar.bz2 9408997
-RMD160 4e1e2342581964840b554cbffddb60ffd0c0b913 texlive-basicbin-2007.tar.bz2 9408997
-SHA256 dca72f36e4766dd189d6e1c05ad8ab9cd13bd14e7261adbf5d96550231c9eabd texlive-basicbin-2007.tar.bz2 9408997
-MD5 59421408e18083e2c9d8979036f33e83 texlive-binextra-2007.tar.bz2 548629
-RMD160 b6bcb710d453fe1005c431aad39969ef7367dae9 texlive-binextra-2007.tar.bz2 548629
-SHA256 40536faf32a93d4084b5d7bd3db49da5a6bf2753828ec6478866fd529ad050e4 texlive-binextra-2007.tar.bz2 548629
+MD5 8b2a54e8d3af2431772389c3ee631cb3 texlive-basicbin-2007.tar.bz2 9135628
+RMD160 4adf7ec1d96bfa8b18f65f3f31149a949cead9d9 texlive-basicbin-2007.tar.bz2 9135628
+SHA256 dd3d01b3f44641e396fec93c8d3f0253a3aa8e4ea35536ee89ecef98105f4fb0 texlive-basicbin-2007.tar.bz2 9135628
+MD5 8c94f0973f928935873d149e6e48321d texlive-binextra-2007.tar.bz2 548636
+RMD160 effa19f63244341a18d3ed57622ed27488e42b32 texlive-binextra-2007.tar.bz2 548636
+SHA256 1e058b767c9fa0afc8476fa14f4f9069b034b9eb9b035c41394a1e3bbfdf0971 texlive-binextra-2007.tar.bz2 548636
 MD5 d539b5a6b9f96cc2616f09f4543394c8 texlive-source-2007.tar.bz2 31078286
 RMD160 496cb3fa3c5cd9b2ea5da3b0bced67a2b5afe7b9 texlive-source-2007.tar.bz2 31078286
 SHA256 96c12147ea9717539553eb6b3be52c2df6163ca617dccc71282ccd39c2e5773b texlive-source-2007.tar.bz2 31078286
