@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Sep 2007; Alexis Ballier <aballier@gentoo.org>
+  texlive-source-2007.ebuild:
+  install dvipdfm from its own ebuild, install texmf-dist
+
   01 Sep 2007; Alexis Ballier <aballier@gentoo.org>
   texlive-source-2007.ebuild:
   More verbose die messages, quote dir variables, patch by opfer
